--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -34,5 +34,6 @@
     "terminal.integrated.lineHeight": 1.9,
     "terminal.integrated.fontSize": 14.98,
     "terminal.integrated.fontWeight": "650",
-    "terminal.integrated.fontLigatures.enabled": true
+    "terminal.integrated.fontLigatures.enabled": true,
+    "terminal.integrated.copyOnSelection": true
 }
